fix: overflow autho

--- a/src/index.scss
+++ b/src/index.scss
@@ -117,7 +117,7 @@ body {
 
 .overlay {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   left: 0;
   top: 0;
@@ -141,6 +141,13 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
+}
+
+.cartContent {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: auto;
 }
 
 .cartItems {
